welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
blueTicket:6: error: not found: value ca
  else if (ab==(10+bc) || ab==(10+ca)) {return 5}
                                  ^